--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.0.0-alpha-5</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
     </dependencies>
 
     <build>
